Salesforce CPQ/main/default/objects/ConfigurationRule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this rule should be used in validating configurations.</description>
    <inlineHelpText>Indicates whether this rule should be used in validating configurations.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>