Salesforce CPQ/main/default/objects/ConfigurationRule__c/fields/ProductFeature__c.field-meta.xml
<CustomField>
    <fullName>ProductFeature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product feature validated by this rule.</description>
    <inlineHelpText>Select the product feature you want this rule to validate.</inlineHelpText>
    <label>Product Feature</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Product__c</field>
            <operation>equals</operation>
            <valueField>ProductFeature__c.ConfiguredSKU__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ProductFeature__c</referenceTo>
    <relationshipLabel>Configuration Rules</relationshipLabel>
    <relationshipName>Configuration_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>