Salesforce CPQ/main/default/objects/ConfigurationRule__c/fields/RuleEvaluationEvent__c.field-meta.xml
<CustomField>
    <fullName>RuleEvaluationEvent__c</fullName>
    <description>Evaluation event of referenced rule.</description>
    <formula>TEXT(ProductRule__r.EvaluationEvent__c)</formula>
    <inlineHelpText>Specify when this rule should be evaluated.</inlineHelpText>
    <label>Rule Evaluation Event</label>
    <type>Text</type>
</CustomField>