Salesforce CPQ/main/default/objects/ConfigurationRule__c/fields/RuleType__c.field-meta.xml
<CustomField>
    <fullName>RuleType__c</fullName>
    <description>Type of referenced rule. Convenience field to avoid querying related rule record.</description>
    <formula>TEXT(ProductRule__r.Type__c)</formula>
    <inlineHelpText>Type of product rule referenced by this configuration rule.</inlineHelpText>
    <label>Rule Type</label>
    <type>Text</type>
</CustomField>