Salesforce CPQ/main/default/objects/ConfigurationRule__c/validationRules/Ensure_rule_type_nested_level.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_rule_type_nested_level</fullName>
    <active>true</active>
    <description>Ensures the related Product Rule is of type Validation, Alert or Selection when specifying either a parent or child bundle condition level.</description>
    <errorConditionFormula>(TEXT(ProductRule__r.Type__c) != null &amp;&amp; TEXT(ProductRule__r.Type__c) != &apos;Validation&apos; &amp;&amp; TEXT(ProductRule__r.Type__c) != &apos;Alert&apos; &amp;&amp; TEXT(ProductRule__r.Type__c) != &apos;Selection&apos;) &amp;&amp; (TEXT(AscendingNestedLevel__c) != null || TEXT(DescendingNestedLevel__c) != null)</errorConditionFormula>
    <errorMessage>Condition Level only supported for Validation, Alert and Selection product rules.</errorMessage>
</ValidationRule>